--- a/index.html
+++ b/index.html
@@ -16,7 +16,22 @@
 	h9.921c0,0-1.94,7.066-5.544,11.918c-2.782,3.746-9.818,7.636-9.818,7.636S81.006,61.476,84,65.875z"/>
 </svg>
       </a>  </button>
-    
+    <hr>
+	  <button>
+		  <a href="https://t.me/hc_kremlevec">
+			<svg version="1.1" id="Слой_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 90.71 90.71" style="enable-background:new 0 0 90.71 90.71;" xml:space="preserve">
+<style type="text/css">
+	.st0{fill:#009FE3;}
+	.st1{fill:#FFFFFF;}
+</style>
+<g>
+	<circle class="st0" cx="44.76" cy="46.9" r="42.52"/>
+	<path class="st1" d="M14.09,38.54l15.29,9.5l2.62,13.09l6.89-5.1L50.18,67.6l15.15-42.29L14.09,38.54z M34.47,53.69l-0.96-5.79
+		l30.85-21.49L34.47,53.69z"/>
+</g>
+</svg>  
+		  </a>  </button>
     
   </body>
 </html>
