--- a/index.html
+++ b/index.html
@@ -20,11 +20,8 @@
 	  <button>
 		  <a href="https://t.me/hc_kremlevec">
 			<svg version="1.1" id="Слой_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 90.71 90.71" style="enable-background:new 0 0 90.71 90.71;" xml:space="preserve">
-<style type="text/css">
-	.st0{fill:#009FE3;}
-	.st1{fill:#FFFFFF;}
-</style>
+	width="113.39px" height="113.39px" viewBox="0 0 90.71 90.71" style="enable-background:new 0 0 90.71 90.71;" xml:space="preserve">
+
 <g>
 	<circle class="st0" cx="44.76" cy="46.9" r="42.52"/>
 	<path class="st1" d="M14.09,38.54l15.29,9.5l2.62,13.09l6.89-5.1L50.18,67.6l15.15-42.29L14.09,38.54z M34.47,53.69l-0.96-5.79
