--- a/index.html
+++ b/index.html
@@ -19,15 +19,22 @@
     <hr>
 	  <button>
 		  <a href="https://t.me/hc_kremlevec">
-			<svg version="1.1" id="Слой_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	width="113.39px" height="113.39px" viewBox="0 0 90.71 90.71" style="enable-background:new 0 0 90.71 90.71;" xml:space="preserve">
-
+			<svg version="1.1" id="Слой_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 width="113.39px" height="113.39px" viewBox="0 0 113.39 113.39" enable-background="new 0 0 113.39 113.39" xml:space="preserve">
 <g>
-	<circle class="st0" cx="44.76" cy="46.9" r="42.52"/>
-	<path class="st1" d="M14.09,38.54l15.29,9.5l2.62,13.09l6.89-5.1L50.18,67.6l15.15-42.29L14.09,38.54z M34.47,53.69l-0.96-5.79
-		l30.85-21.49L34.47,53.69z"/>
+	<defs>
+		<rect id="SVGID_1_" x="12" y="8.06" width="96.25" height="96.25"/>
+	</defs>
+	<clipPath id="SVGID_2_">
+		<use xlink:href="#SVGID_1_"  overflow="visible"/>
+	</clipPath>
+	<path clip-path="url(#SVGID_2_)" fill="#009CDD" d="M104.613,57.821c0,24.917-20.2,45.117-45.117,45.117
+		s-45.116-20.2-45.116-45.117s20.199-45.117,45.116-45.117S104.613,32.903,104.613,57.821"/>
+	<path clip-path="url(#SVGID_2_)" fill="#FFFFFF" d="M26.947,48.951l16.224,10.085l2.777,13.884l7.308-5.407l11.985,12.277
+		l16.076-44.87L26.947,48.951z M48.579,65.027l-1.023-6.138l32.739-22.801L48.579,65.027z"/>
 </g>
-</svg>  
+</svg>
+
 		  </a>  </button>
     
   </body>
